enhance(frontend): models & interfaces

--- a/client/src/app/chat/components/message/message.component.html
+++ b/client/src/app/chat/components/message/message.component.html
@@ -1,4 +1,4 @@
-<div
+<!-- <div
   [class]="{'justify-end': message.sentByCurrentUser}"
   class="flex items-start gap-2">
   <img
@@ -18,4 +18,4 @@
     <small [class]="{'text-end': message.sentByCurrentUser}"
     class="block py-1">{{ message.sentAt | date:"h:m EEEE" }}</small>
   </div>
-</div>
+</div> -->
