--- a/client/src/app/chat/components/room-chat-selector/room-chat-selector.component.html
+++ b/client/src/app/chat/components/room-chat-selector/room-chat-selector.component.html
@@ -18,3 +18,17 @@
   <!-- <button class="hover:bg-fourth bg-third p-3 text-gray-600 rounded-full shadow-md">
     <i class="icon-more-vert flex items-center justify-center"></i>
   </button> -->
+
+<a *ngFor="let roomChat of roomChats$ | async"
+  [class]="roomChat.id === selectedRoomChat?.id ? 'bg-second/60' : 'hover:bg-gray-200'"
+  [routerLink]="'/chat/r/' + roomChat.id"
+  class="flex items-center gap-3 px-4 py-2.5 cursor-pointer rounded-xl">
+
+  <img class="max-w-20 border-slate-700 border-2 rounded-full" [src]="roomChat.participants[0].user.avatar"
+    [alt]="'Avatar of room chat' + roomChat.id">
+
+  <div class="md:block flex-grow hidden">
+    <h6 class="text-lg font-semibold">{{ roomChat.participants[0].user.fullname }}</h6>
+    <p>{{ roomChat.messages[0].content }} · {{ roomChat.messages[0].createdAt | timeGap | async }}</p>
+  </div>
+</a>
