--- a/client/src/app/chat/pages/default-page/default-page.component.html
+++ b/client/src/app/chat/pages/default-page/default-page.component.html
@@ -1,13 +1,11 @@
-<!-- <div class="md:flex-row relative flex flex-col h-full max-h-full gap-2 pb-2">
+<div class="md:flex-row relative flex flex-col h-full max-h-full gap-2 pb-2">
   <div class="md:w-1/3 lg:w-1/4 md:max-h-full md:overflow-y-auto w-full px-2 space-y-4">
     <h4 class="mt-4 ml-4 text-xl font-semibold">Your chats</h4>
     <app-live-search class="block"></app-live-search>
 
     <div class="md:block md:py-0 flex py-2 overflow-x-auto">
 
-      <app-room-chat-selector
-        [selectedRoomChat]="">
-      </app-room-chat-selector>
+      <app-room-chat-selector></app-room-chat-selector>
     </div>
 
   </div>
@@ -20,4 +18,4 @@
     <p class="text-unica-one py-2 text-xl italic font-semibold">Keep your communication with everyone!</p>
   </div>
 
-</div> -->
+</div>
