--- a/client/src/app/chat/pages/default-page/default-page.component.html
+++ b/client/src/app/chat/pages/default-page/default-page.component.html
@@ -11,7 +11,7 @@
   </div>
 
   <div class="md:w-2/3 lg:w-3/4 flex flex-col items-center justify-center flex-grow w-full pb-2 border-l-2 border-gray-300">
-    <img class="max-w-60" src="/assets/images/yuhat.png" alt="Yuhat Logo">
+    <img class="max-w-60" src="/assets/images/yuhat.png" alt="Yuhat Logo" draggable="false">
     <h6 class="text-4xl font-semibold">
       <span class="text-lobster text-blue-900">Yu</span><span class="text-lobster text-sky-400">hat</span>
     </h6>
