--- a/client/src/app/chat/components/input-message-box/input-message-box.component.html
+++ b/client/src/app/chat/components/input-message-box/input-message-box.component.html
@@ -5,13 +5,40 @@
   <button>
     <i class="icon-attach-file text-secondary hover:text-primary text-2xl"></i>
   </button>
-  <textarea
-    #input
-    class="no-scrollbar flex-grow rounded-lg"
-    [formControl]="messageInput"
-    cols="30"
-    rows="1"
-    placeholder="Aa"></textarea>
+  <div class="flex flex-col flex-grow gap-2">
+    <div class="flex flex-wrap gap-4">
+      <ng-container *ngFor="let imageUrl of imageUrls; let i = index">
+        <div class="relative">
+          <img
+          class="max-w-14 border-2 border-gray-400 border-dashed rounded-md"
+          [src]="imageUrl"
+          alt="">
+          <button
+            type="button"
+            class="-top-2 -right-2 absolute px-1 bg-gray-300 rounded-full"
+            (click)="popSelectedFile(i)">
+            <i class="icon-close"></i>
+          </button>
+        </div>
+      </ng-container>
+      <button class="min-w-14 min-h-14 relative border-2 border-gray-400 border-dashed rounded-md">
+        <input class="absolute top-0 bottom-0 left-0 right-0 w-full h-full opacity-0 cursor-pointer"
+          type="file"
+          accept="image/*, .pdf, .doc, .docx, .rar, .zip"
+          (change)="onFileSelect($event)"
+          multiple>
+        <i class="icon-add-circle text-xl text-gray-500"></i>
+      </button>
+    </div>
+    <textarea
+      #input
+      class="no-scrollbar w-full rounded-lg"
+      [formControl]="messageInput"
+      cols="30"
+      rows="1"
+      placeholder="Aa"></textarea>
+  </div>
+
   <button [disabled]="!messageInput.valid" (click)="onSendMessage()">
     <i
       [ngClass]="messageInput.valid ? 'text-first hover:text-primary' : 'text-gray-400'"
