--- a/client/src/libs/icomoon/style.css
+++ b/client/src/libs/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?6wgb46');
-  src:  url('fonts/icomoon.eot?6wgb46#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?6wgb46') format('truetype'),
-    url('fonts/icomoon.woff?6wgb46') format('woff'),
-    url('fonts/icomoon.svg?6wgb46#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?ab5833');
+  src:  url('fonts/icomoon.eot?ab5833#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?ab5833') format('truetype'),
+    url('fonts/icomoon.woff?ab5833') format('woff'),
+    url('fonts/icomoon.svg?ab5833#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,11 +25,23 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-close:before {
-  content: "\e903";
+.icon-download:before {
+  content: "\e91c";
+}
+.icon-pdf:before {
+  content: "\e919";
+}
+.icon-zip:before {
+  content: "\e91a";
+}
+.icon-word:before {
+  content: "\e91b";
 }
 .icon-send:before {
   content: "\e907";
+}
+.icon-close:before {
+  content: "\e903";
 }
 .icon-add-circle:before {
   content: "\e905";
