--- a/client/src/app/chat/components/message/message.component.html
+++ b/client/src/app/chat/components/message/message.component.html
@@ -7,6 +7,10 @@
     [src]="message.sender.avatar"
     [alt]="message.sender.fullname">
   <div style="max-width: 60%;">
+    <small *ngIf="!message.sentByCurrentUser" class="block py-1">
+      {{ message.sender.fullname }}
+    </small>
+
     <div
       class="p-2 space-y-1 rounded-lg"
       [ngClass]="{
