--- a/client/src/app/layout/components/header/header.component.html
+++ b/client/src/app/layout/components/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="fixed top-0 left-0 right-0 z-10 bg-white border-gray-200 shadow-md">
   <div class="container flex flex-wrap items-center justify-between p-4 mx-auto">
     <a routerLink="/" class="flex items-center space-x-3">
-      <img src="/assets/images/yuhat-horizontal.png" class="h-12" alt="Yuhat Logo"/>
+      <img src="/assets/images/yuhat-horizontal.png" class="h-12" alt="Yuhat Logo" draggable="false"/>
     </a>
     <div class="md:order-2 md:space-x-0 flex items-center space-x-3">
       <button type="button"
