--- a/client/src/app/chat/pages/dashboard/dashboard.component.html
+++ b/client/src/app/chat/pages/dashboard/dashboard.component.html
@@ -29,7 +29,7 @@
 
       <div #chatView class="flex-grow p-2 mt-1 space-y-2 overflow-y-auto bg-gray-200">
         <ng-container *ngFor="let message of messages$ | async">
-          <app-message [message]="message"></app-message>
+          <app-message [message]="message" [roomChatType]="currentRoomChat.type"></app-message>
         </ng-container>
       </div>
 
