--- a/client/src/app/chat/components/dialog-create-group-chat/dialog-create-group-chat.component.html
+++ b/client/src/app/chat/components/dialog-create-group-chat/dialog-create-group-chat.component.html
@@ -8,7 +8,8 @@
         class="max-w-40 rounded-md"
         draggable="false"
         [src]="imageUrl"
-        alt="Preview group avatar">
+        alt="Preview group avatar"
+        loading="lazy">
         <button
           type="button"
           class="absolute bottom-0 right-0 bg-gray-200 rounded-sm rounded-bl-none">
