--- a/client/src/app/chat/components/input-message-box/input-message-box.component.html
+++ b/client/src/app/chat/components/input-message-box/input-message-box.component.html
@@ -15,7 +15,8 @@
             <img
             class="max-w-14 border-2 border-gray-400 border-dashed rounded-md"
             [src]="file"
-            alt="">
+            alt="Preview attachment"
+            loading="eager">
             <button
               type="button"
               class="-top-2 -right-2 absolute px-1 bg-gray-300 rounded-full"
