feat(frontend & backend): link account with 3rd parties

--- a/client/src/app/layout/components/header/header.component.html
+++ b/client/src/app/layout/components/header/header.component.html
@@ -1,6 +1,6 @@
 <nav class="fixed top-0 left-0 right-0 z-10 bg-white border-gray-200 shadow-md">
   <div class="container flex flex-wrap items-center justify-between p-4 mx-auto">
-    <a routerLink="/" class="flex items-center space-x-3">
+    <a routerLink="/" class="flex items-center space-x-3" tabindex="-1">
       <img
         class="h-12"
         src="/assets/images/yuhat-horizontal.png"
