--- a/client/src/app/chat/components/input-message-box/input-message-box.component.html
+++ b/client/src/app/chat/components/input-message-box/input-message-box.component.html
@@ -1,5 +1,18 @@
 <div class="flex items-end gap-2 px-2 pt-2">
-  <button type="button">
+  <button
+    *ngIf="selectedRoomChat.type === 'group'"
+    type="button"
+    [matTooltip]="'Manage member'"
+    [matTooltipPosition]="'above'"
+    (click)="openDialog()"
+  >
+    <i class="icon-add-person text-secondary hover:text-primary text-2xl"></i>
+  </button>
+  <button
+    type="button"
+    [matTooltip]="'Attach file'"
+    [matTooltipPosition]="'above'"
+  >
     <label for="input-files" class="cursor-pointer">
       <i class="icon-attach-file text-secondary hover:text-primary text-2xl"></i>
     </label>
