chore(frontend & backend): remove unuse things

--- a/client/src/app/chat/components/room-chat-selector/room-chat-selector.component.html
+++ b/client/src/app/chat/components/room-chat-selector/room-chat-selector.component.html
@@ -3,7 +3,7 @@
   [routerLink]="'/chat/r/' + roomChat.id"
   class="flex items-center gap-3 px-4 py-2.5 cursor-pointer rounded-xl">
 
-  <img class="max-w-20 border-slate-700 border-2 rounded-full"
+  <img class="max-w-10 sm:max-w-20 border-slate-700 border-2 rounded-full"
   [src]="roomChat.type === 'personal' ? roomChat.participants[0].user.avatar : roomChat.avatar"
   [alt]="'Avatar of room chat' + roomChat.id">
 
