--- a/client/src/app/profile/pages/edit-profile/edit-profile.component.html
+++ b/client/src/app/profile/pages/edit-profile/edit-profile.component.html
@@ -30,7 +30,7 @@
 
     <div class="pl-1 mb-4">
       <label class="block">Gender</label>
-      <mat-radio-group formControlName="gender" class="space-x-6">
+      <mat-radio-group formControlName="gender" class="gap-x-6 gap-y-2 flex flex-wrap">
         <mat-radio-button value="male">Male</mat-radio-button>
         <mat-radio-button value="female">Female</mat-radio-button>
         <mat-radio-button value="other">Other</mat-radio-button>
